# fixif

./: .gitignore  .project  .travis.yml  ARITH_review_example1  README  README.rst  README.txt  setup.py  tox.ini  vendor.yml
construct/WCPG/: .NOTES_API_FiPoGen.kate-swp  NOTES_API_FiPoGen
construct/fipogen-v1/: fipogen_treat_example.py
construct/fipogen-v2/: README.txt  create_package.sh  debug_c_extension.sh  run_tests.sh  setup.py
construct/fwrtoolbox/: initpath.m
construct/pyFWR/: pyFWR.wpu
fipogen/FxP/: Adder.py  Constant.py  FPF.py  Multiplier.py  Test_hist.py  Variable.py  __init__.py  oSoP_Generator.py  oSoP_class.py
fipogen/LTI/: Butter.py  Gabarit.py  LTI.py  __init__.py  dSS.py  dSSmp.py  dTF.py  dTFmp.py  filter.py  filtre1.sol  filtre_silviu_10_d.sol  filtre_silviu_20.sol  gabarit.sol  random.py  random_dSS.py  test_filtre1.sol  wcpg.sol
fipogen/SIF/: Realization.py  Realization_FxP.py  Realization_algorithms.py  Realization_implements.py  SIF.py  SIF_algorithmCfloat.py  SIF_algorithms.py  SIF_tilde_error.py  S_I_F_tilde_error.py  __init__.py  algorithmAuxFunc.py
fipogen/Structures/: Structure.py  __init__.py
fipogen/func_aux/: MPFMatrix.py  MatlabHelper.py  __init__.py  dynMethodAdder.py  mpf_get_representation.py  mpf_matrix.py  mpf_matrix_fadd.py  mpf_matrix_fmul.py  mpf_matrix_fsub.py  mpf_matrix_get_representation.py  mpf_matrix_to_sollya.py  mpf_to_numpy.py  python2mpf_matrix.py
fipogen/oSoP/: Constant.py  FPF.py  Variable.py  __init__.py
fipogen/server/: (12)12d39_100_-12_0_0d0912_[0;12]_[-1;56]_34_0d09_-0d09_.txt  (13)12d39_100_-12_0_0d0912_[0;12]_[-1;56]_34_0d09_-0d09_.txt  (16)12d39_100_-12_0_0d0912_[0;12]_[-1;56]_34_0d09_-0d09_.txt  (23)12d39_100_-12_0_0d0912_[0;12]_[-1;56]_34_0d09_-0d09_.txt  (32)12d39_100_-12_0_0d0912_[0;12]_[-1;56]_34_0d09_-0d09_.txt  (4)0d1_.txt  (4)0d1_0_.txt  (4)12d39_100_-12_0_0d0912_[0;12]_[-1;56]_34_0d09_-0d09_.txt  activity.log.1  input.sollya  path.py  runServer.py  server.py  test.sollya  utilities.py
fipogen2/: .gitignore  0_manual_tutorial.py  FAQ_DEVTRICKS.txt  FIPsandbox_7.py  README.txt  __init__.py  run_tests.sh  setup.py
fipogen2/FIPObject/: FIPObject.py
fipogen2/ID_provider/: .ID_M.py.kate-swp  FIPObject.py  ID_M.py
fipogen2/LTI/: TF.py  __init__.py  dSS.py  dTF.py  mp_calc.c  pyWCPG.py  random_dSS.py
fipogen2/OPT/: OPT_methods.py
fipogen2/SIF/: MsensH.py  SIF.py  SIF_MsensH.py  SIF_MsensPole.py  SIF_Mstability.py  SIF_RNG.py  SIF_algorithmCfloat.py  SIF_calc_MsensH.py  SIF_calc_MsensPole.py  SIF_calc_Mstability.py  SIF_calc_RNG.py  SIF_optimizeForm.py  SIF_transform_UYW_MsensH.py  SIF_transform_UYW_MsensPole.py  SIF_transform_UYW_Mstability.py  SIF_transform_UYW_RNG.py  __init__.py  algorithmCfloat.py  algorithmLaTeX.py  calc_plantSIF.py
fipogen2/Structures/: __init__.py
fipogen2/TRK/: FIPEvent.py  FIPLabel.py  FIPObjEvent.py  FIPObject.py  FIPevent.py  FIPlabel.py  FIPobject.py
fipogen2/dSS/: __init__.py  class_dSS.py
fipogen2/doc/: Makefile  make.bat
fipogen2/examples/: 0_manual_tutorial.py
fipogen2/fipogen/: __init__.py
fipogen2/func_aux/: MtlbHelper.py  __init__.py  _dynMethodAdder.py  gen_data.py  get_data.py  mtlb_helper.py
fixif/: __init__.py  config.py
fixif/LTI/: Butter.py  Elliptic.py  Filter.py  Gabarit.py  __init__.py  dSS.py  dSSmp.py  dTF.py  dTFmp.py  filtre_silviu.sol  filtre_silviu_10.sol  gabarit.sol
fixif/SIF/: Realization.py  Realization_FxP.py  Realization_FxP_Nastia.py  Realization_algorithms.py  Realization_implementation.py  Realization_implements.py  SIF.py  SIF_sensibility.py  SIF_tilde_error.py  S_I_F_tilde_error.py  __init__.py  varName.py
fixif/SoP/: FxPSoP.py  SoP.py  VarName.py  __init__.py
fixif/Structures/: Structure.py  __init__.py
fixif/func_aux/: MPFMatrix.py  MatlabHelper.py  __init__.py  dynMethodAdder.py  genScalarProduct.py  mp_poly_product.py  mpc_get_real.py  mpf_matrix_fadd.py  mpf_matrix_fmul.py  mpf_matrix_fsub.py  mpf_matrix_get_representation.py  mpf_matrix_lt_inverse.py  mpf_matrix_to_sollya.py  mpf_poly_mult.py  sollya_matrix_print.py  sollya_matrix_to_numpy.py  write_matrix_hex.py  write_matrix_mpf.py
source/: run_me.py  test.py
source/class/: class_dSS.py  class_discrete_statespace.py  dSS_calc.py  dSS_class.py  random_dSS.py
source/func_run/: func_opt_management.py
start/WCPG/: WCPG_dirtyimport_from_SVN_up2date_24_07_2015
start/WCPG/Autotools/: .directory  AUTHORS  Makefile  Makefile.am  Makefile.in  _wcpg.c  autogen.sh  clapack_functions_config.h  clapack_linalg.c  config.h  config.h.in  config.status  configure  configure.ac  glue.lo  inclusion_verif.h  inclusion_verif.lo  libtool  mpfi_cmpx.lo  resultat_test.txt  wcpg.h  wcpg.lo  wcpg_test  wcpg_test.c
start/WCPG/Autotools/.deps/: _wcpg.Plo  clapack_functions_config.Plo  clapack_linalg.Plo  glue.Plo  inclusion_verif.Plo  mpfi_cmpx.Plo  mpfi_matrixalg.Plo  mpfr_linalg.Plo  wcpg.Plo  wcpg_test-wcpg_test.Po
start/WCPG/Autotools/.libs/: libwcpg.la  libwcpg.lai  libwcpg.so.0.0.9  lt-wcpg_test  wcpg_test
start/WCPG/Autotools/.svn/: wc.db
start/WCPG/Autotools/autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2
start/WCPG/Autotools/examples/: .NOTES_EXAMPLES.txt.kate-swp  CompanionCoef.txt  NOTES_EXAMPLES.txt  input2.txt
start/fipogen-v1/: fipogen_treat_example.py
start/pyFWR/: .coverage  setup.py
work/: Test Results - test_arith24.html  Test Results - tests_in_FxP.html  Test Results - tests_in_LTI.html  Test2.html  test_Gabarit (old gabarit.sol).html  test_Gabarit.html  tests_in_LTI(12h00).html
work/ARITH24/: arith.py  filtre1.sol  filtre2.sol  gabarit.py  gabarit.sol  test_arith.py  test_filtre1.py  test_filtre2.sol  test_gabarit.py
work/Asilomar17/: asilomar.py
work/BenThib_020316/: ARITH23_BLTH_ex.mat  dH_vs_Htilde.m  dhA.m  script.py  testWtilde.m
work/FFT/: fft.py
work/FixSIF/: FixSIF.py
work/IIRCJR/: examples.py
work/Nastia_Thesis/: thesis.py
work/SiPS2016/: DFIIt-vertical.slx  DFIIt.slx  LWDF_butter3.slx  S17.mat  SiPS16.py  error-bits.tex
work/benoit_11_2015/: script_benoit.py  test_wcpg.py
(+2519 files in other folders)
